跳转进新闻界面有问题

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Soot</string>
+    <string name="title_activity_news_content">NewsContentActivity</string>
+    <string name="action_settings">Settings</string>
 </resources>
